--- a/Day 30/classwork/classwork.html
+++ b/Day 30/classwork/classwork.html
@@ -36,6 +36,7 @@
     <p>ტელეფონი:551-99-77-53</p>
     <p>Gmail:androsvanidze2008@gmail.com</p>
     <b><a href="https://www.facebook.com/andria.svanidze.94">მომწერეთ პირადში</a></b>
+    <a href=""></a>
 
 
 
