--- a/Day 31/homework/index.html
+++ b/Day 31/homework/index.html
@@ -6,6 +6,44 @@
     <title>Document</title>
 </head>
 <body>
-    <ul>dadswdas</ul>
+    <strong><p>დამატებითი ინფორმაციისტვის გვეწვიეთ აქ ⬇️</p></strong>
+    <strong><button><a href="/Day 31/homework/contactus.html">Contact Us</a></button></strong>
+    <strong><button><a href="/Day 31/homework/aboutus.html">About Us</a></button></strong>
+    <h1>ONLY SPORT</h1><hr>
+    <h2>რეტრო მაისურები</h2><hr>
+    <!--რონალდოს იუნაიტედის მაისური-->
+    <img src="/Day 31/homework/images (2).jpg" width="400"  alt="დრო გაგივიდა ჯიგარ">
+    <ul>
+        <li><p>2008 წლის ლიგის ფინალის მაისური</p></li>
+        <li><p>კრიშტიანუ რონალდუ</p></li>
+        <li><p>ფასი:129 ლ</p></li>
+    </ul><hr>
+     
+
+    <!--რონალდოს პორტუგალიის მაისური-->
+    <img src="/Day 31/homework/images (1).jpg" width="400"  alt="დრო გავიდა ძმააა">
+    <ul>
+        <li><p>2022 წლის პორტუგალიის ფორმა</p></li>
+        <li><p>კრიშტიანუ რონალდუ</p></li>
+        <li><p>ფასი:99 ლ </p></li>
+    </ul><hr>
+
+    <img src="/Day 31/homework/s-l1600.webp" width="400"  alt="აეე დააგვიანე">
+    <ul>
+        <li><p>2018 წლის ლიგის ფინალის მაისური</p></li>
+        <li><p></p>კრიშტიანუ რონალდუ</li>
+        <li><p>ფასი:139 ლ</p></li>
+    </ul><hr>
+
+
+    <img src="/Day 31/homework/shopping.webp" width="400"  alt=":(">
+    <ul>
+        <li><p>2017 წლის ლიგის ფინალის მაისური</p></li>
+        <li><p>კრიშტიანუ რონალდუ</p></li>
+        <li><p>ფასი:169 ლ</p></li>
+        
+    </ul><hr>
+
+
 </body>
 </html>
